# telegram-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  alembic.ini  compose.yml  config.yaml  main.py  pyproject.toml
alembic/: README  env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_add_reminders_table.py  0003_reminders_onetime_and_buttons.py  0004_invoices_schema.py  0005_invoices_add_original_filename.py  0006_invoices_add_subcategory_recurring.py  0007_invoices_add_billing_period.py  0008_piano_active_sessions.py  0009_subscriptions.py  0010_piano_streak_freeze.py
bot/: config.py
bot/handlers/: _common.py  calories.py  goals.py  liquids.py  model.py  piano.py  profiles.py  reminders.py  review.py  summary.py  supplements.py
bot/modules/: __init__.py
bot/modules/calories/: __init__.py  scheduled.py
bot/modules/calories/agents/: meal_analyzer.md
bot/modules/calories/handlers/: calories.py  goals.py  liquids.py  review.py  summary.py  supplements.py
bot/modules/core/: __init__.py
bot/modules/food/: __init__.py  scheduled.py
bot/modules/food/agents/: day_reviewer.md  liquid_analyzer.md  recipe_analyzer.md
bot/modules/food/handlers/: meals.py  review.py
bot/modules/gmail/: __init__.py  scheduled.py
bot/modules/gmail/handlers/: emails.py
bot/modules/invoices/: __init__.py
bot/modules/invoices/agents/: invoice_reader.md
bot/modules/invoices/handlers/: invoices.py
bot/modules/invoices/services/: analyzer.py  summary.py
bot/modules/piano/: __init__.py  scheduled.py
bot/modules/piano/agents/: practice_coach.md  recording_analyzer.md
bot/modules/piano/handlers/: piano.py
bot/modules/piano/services/: audio_agent.py  coach.py  streaks.py
bot/modules/subscriptions/: __init__.py
bot/modules/subscriptions/handlers/: subscriptions.py
bot/modules/supplements/: __init__.py
bot/modules/supplements/handlers/: supplements.py
bot/services/: agent_runner.py  db.py  db_postgres.py  db_sqlite.py  entries.py  gmail.py  llm.py  scheduler.py
bot/services/piano/: audio_agent.py  coach.py  repertoire.py  streaks.py
bot/tools/: __init__.py
bot/utils/: formatting.py  logging_config.py  nutrition.py  storage.py
migrations/: init.sql
requirements/: claude_code_prompt.md  gmail.md  gmail_plan.md  ideas.md  invoice_plan.md  invoices-summary.md  piano_plan.md  piano_prompt.md
scripts/: gmail_auth.py  migrate_sqlite_to_pg.py
tests/: test_formatting.py  test_formatting_extended.py  test_invoice.py  test_invoice_summary.py  test_piano_coach.py  test_piano_log.py  test_piano_repertoire.py  test_piano_streak.py
