[project]
name = "calorie-bot"
version = "0.1.0"
description = "Telegram bot for tracking calories and supplements"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-telegram-bot>=20.7",
    "openai>=1.12",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "sqlalchemy[asyncio]>=2.0",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "Pillow>=10.2",
    "python-dotenv>=1.0",
]
