[project]
name = "sebson-bot"
version = "0.1.0"
description = "Sebson's modular Telegram bot — calories, piano, invoices and more"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-telegram-bot>=20.7",
    "openai>=1.12",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "sqlalchemy[asyncio]>=2.0",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "Pillow>=10.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
    "pypdf>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.5",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["bot"]
# Exclude code that requires Telegram, DB, LLM, or scheduler at import/run time.
# These can only be tested via integration tests; unit-test coverage of them is
# meaningless and drags the headline number down.
omit = [
    # Telegram handler code — needs Update/Context objects
    "bot/handlers/*.py",
    "bot/modules/*/handlers/*.py",
    # DB layer — needs a live asyncpg pool
    "bot/services/db.py",
    # External service clients
    "bot/services/llm.py",
    "bot/services/gmail.py",
    "bot/services/scheduler.py",
    "bot/services/agent_runner.py",
    # LLM-backed services (no pure logic worth isolating)
    "bot/modules/piano/services/audio_agent.py",
    "bot/modules/piano/services/coach.py",  # build_coach_context/run_checkin/summarize_log need DB+LLM
    "bot/modules/invoices/services/analyzer.py",
    # Scheduled jobs — need scheduler + bot instance
    "bot/modules/*/scheduled.py",
    # Module loaders and entry-point wiring
    "bot/modules/__init__.py",
    "bot/modules/core/__init__.py",
    "bot/modules/gmail/__init__.py",
    "bot/modules/gmail/handlers/*.py",
    "bot/modules/subscriptions/__init__.py",
    "bot/modules/subscriptions/handlers/*.py",
    "bot/modules/supplements/__init__.py",
    "bot/tools/__init__.py",
    # Infra / setup
    "bot/utils/logging_config.py",
    "bot/utils/storage.py",
    "main.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
